terraform/modules/app_subnet/main.tf
# App Subnet
resource "aws_subnet" "cyber94_vulnerability_scanner_subnet_app_tf"{
  vpc_id = var.var_aws_vpc_id
  cidr_block = "10.118.1.0/24"

  tags = {
    Name = "cyber94_vulnerability_scanner_subnet_app"
  }
}

# App Route Table Association
resource "aws_route_table_association" "cyber94_vulnerability_scanner_rt_assoc_app_tf" {
    subnet_id = aws_subnet.cyber94_vulnerability_scanner_subnet_app_tf.id
    route_table_id = var.var_internet_rt
}

# App Network Access Control List
resource "aws_network_acl" "cyber94_vulnerability_scanner_ncal_app_tf"{
  vpc_id = var.var_aws_vpc_id

  egress {
       protocol   = "-1"
       rule_no    = 100
       action     = "allow"
       cidr_block = "0.0.0.0/0"
       from_port  = 0
       to_port    = 0
     }

  ingress {
      protocol   = "-1"
      rule_no    = 100
      action     = "allow"
      cidr_block = "0.0.0.0/0"
      from_port  = 0
      to_port    = 0
    }

  subnet_ids = [aws_subnet.cyber94_vulnerability_scanner_subnet_app_tf.id]

  tags = {
    Name = "cyber94_vulnerability_scanner_ncal_app"
  }
}
